fixed button overflow with top section

--- a/assets/css/menus.css
+++ b/assets/css/menus.css
@@ -443,7 +443,8 @@ main #menu {
       margin-right: 10px;
       font-size: 1.2em; }
   main #menu button {
-    margin: 0 auto; }
+    margin: 0 auto;
+    margin-top: 20px; }
   main #menu section {
     padding: 0;
     margin-top: 30px;
