--- a/assets/scss/menu.scss
+++ b/assets/scss/menu.scss
@@ -103,6 +103,7 @@ main {
 
         button {
             margin: 0 auto;
+            margin-top: 20px;
         }
 
         // for starter, dish and dessert
